Made map cache expire every 30 minutes. Added carebear and kill icons to map next to system name. Fixed annoying jumping of editing sig to top under certain conditions.

--- a/public/themes/0/siggy.map.css
+++ b/public/themes/0/siggy.map.css
@@ -229,6 +229,13 @@ MAP */
 	white-space: nowrap;
 	border-bottom: 1px dotted #000;
 }
+
+.map-system-blob-mini-icon
+{
+	width:12px;
+	height:12px;
+}
+
 .map-system-blob-sysname
 {
 	font-size:12px;
